fixes spacing

--- a/css/classy.scss
+++ b/css/classy.scss
@@ -60,7 +60,7 @@ body {
         padding: 0;
         margin: 0;
         li {
-            &:nth-of-type(1) {
+            &:nth-of-type(1),:nth-of-type(2) {
                 text-align: left;
             }
             &:nth-of-type(4) {
